--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,8 @@
   /* LEFT COLUMN */
   .left-column{
     grid-area: left-column;
-    padding: 50px;
-    background-color: #4472C4;
+    padding: 60px;
+    background-color: #779ad8;
     color: white;
   }
   
