--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 /* GENERAL */
 *{
+    font-family: roboto;
     margin: 0;
     box-sizing: border-box;
   }
   
-  body{
-    font-family: Roboto;
+  .body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 300;
     font-size: .9rem;
     line-height: 1.5;
@@ -102,7 +103,7 @@
   /* HEADER */
   .header{
     grid-area: header;
-    padding: 50px;
+    padding: 45px;
     background-color: #F2F2F2;
     display: flex;
     flex-direction: column;
@@ -124,4 +125,3 @@
   .experience-list{
     list-style-type: circle;
   }
-
